<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="title_activity_note_list">Note List Activity</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="editNote">Edit Note</string>
    <string name="cancel">Cancel</string>
    <string name="send_as_email">Send as email</string>
    <string name="next">Next</string>
    <string name="title_activity_main">NoteKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
...
